# diesel

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  PROGRESS_SUMMARY.md  docker-compose.yml  notepad  plan1.md  plan2.md
diesel-gaussdb/: CHANGELOG.md  COMPLEX_TYPES.md  COMPLEX_TYPES_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PHASE_5_1_5_3_COMPLETION.md  PHASE_5_COMPLETION.md  README.md
diesel-gaussdb/docker/: docker-compose.yml
diesel-gaussdb/docker/init/: init.sql
diesel-gaussdb/examples/: array_types.rs  basic_usage.rs  complex_types_example.rs
diesel-gaussdb/src/: backend.rs  gaussdb_extensions.rs  lib.rs  metadata_lookup.rs  transaction.rs  value.rs
diesel-gaussdb/src/connection/: mod.rs  raw.rs  result.rs  row.rs  stmt.rs
diesel-gaussdb/src/expression/: mod.rs
diesel-gaussdb/src/expression/functions/: date_and_time.rs  math.rs  string.rs
diesel-gaussdb/src/query_builder/: distinct_on.rs  limit_offset.rs  mod.rs  on_constraint.rs  only.rs  tablesample.rs
diesel-gaussdb/src/query_builder/copy/: copy_from.rs  copy_to.rs  mod.rs
diesel-gaussdb/src/serialize/: mod.rs  write_tuple.rs
diesel-gaussdb/src/types/: array.rs  custom.rs  date_and_time.rs  json.rs  mac_addr.rs  mac_addr_8.rs  mod.rs  money.rs  multirange.rs  network_address.rs  numeric.rs  primitives.rs  ranges.rs  sql_types.rs  uuid.rs
diesel-gaussdb/tests/: builtin_functions_test.rs  complex_types_test.rs  integration_tests.rs  type_system_test.rs
docker/postgres/init/: init.sql
